// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast should close toast when close icon is clicked 1`] = `
.c3 {
  font-size: 2.4rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c3 * {
  fill-opacity: 1;
  fill: #607890;
}

.c8 {
  font-size: 2.4rem;
  cursor: pointer;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c8 * {
  fill-opacity: 1;
  fill: #607890;
}

.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c7 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  display: block;
  margin: 0.8rem 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-width: 25rem;
  box-shadow: 0 0.8rem 3.2rem;
  border-radius: 0.4rem;
  border-left: 0.4rem solid;
}

.c0 .c5 {
  color: #012040;
}

.c0 > .c2 {
  position: absolute;
  right: 1.2rem;
  top: 1.2rem;
}

.c0 > .c2 * {
  fill: #012040;
}

.c1 .c2 {
  padding: 1.2rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ffffff;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 1.3rem 1.6rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        class="c2 c3"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.911 12.814l4.243 4.242M9.154 17.056l9.899-9.899"
          stroke="#000"
          stroke-linecap="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <div
      class="c4"
    >
      <span
        class="c5 c6"
      >
        Heading 1
      </span>
      <span
        class="c5 c7"
      >
        Info message
      </span>
    </div>
    <svg
      class="c2 c8"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        fill="#000"
        fill-opacity=".54"
      />
    </svg>
  </div>
</div>
`;

exports[`Toast should render header and message text 1`] = `
.c3 {
  font-size: 2.4rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c3 * {
  fill-opacity: 1;
  fill: #607890;
}

.c8 {
  font-size: 2.4rem;
  cursor: pointer;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c8 * {
  fill-opacity: 1;
  fill: #607890;
}

.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c7 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  display: block;
  margin: 0.8rem 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-width: 25rem;
  box-shadow: 0 0.8rem 3.2rem;
  border-radius: 0.4rem;
  border-left: 0.4rem solid;
}

.c0 .c5 {
  color: #012040;
}

.c0 > .c2 {
  position: absolute;
  right: 1.2rem;
  top: 1.2rem;
}

.c0 > .c2 * {
  fill: #012040;
}

.c1 .c2 {
  padding: 1.2rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ffffff;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 1.3rem 1.6rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        class="c2 c3"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.911 12.814l4.243 4.242M9.154 17.056l9.899-9.899"
          stroke="#000"
          stroke-linecap="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <div
      class="c4"
    >
      <span
        class="c5 c6"
      >
        Heading 1
      </span>
      <span
        class="c5 c7"
      >
        Info message
      </span>
    </div>
    <svg
      class="c2 c8"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        fill="#000"
        fill-opacity=".54"
      />
    </svg>
  </div>
</div>
`;

exports[`Toast should render header text 1`] = `
.c3 {
  font-size: 2.4rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c3 * {
  fill-opacity: 1;
  fill: #607890;
}

.c7 {
  font-size: 2.4rem;
  cursor: pointer;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c7 * {
  fill-opacity: 1;
  fill: #607890;
}

.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-width: 25rem;
  box-shadow: 0 0.8rem 3.2rem;
  border-radius: 0.4rem;
  border-left: 0.4rem solid;
}

.c0 .c5 {
  color: #012040;
}

.c0 > .c2 {
  position: absolute;
  right: 1.2rem;
  top: 1.2rem;
}

.c0 > .c2 * {
  fill: #012040;
}

.c1 .c2 {
  padding: 1.2rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ffffff;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 1.3rem 1.6rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        class="c2 c3"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.911 12.814l4.243 4.242M9.154 17.056l9.899-9.899"
          stroke="#000"
          stroke-linecap="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <div
      class="c4"
    >
      <span
        class="c5 c6"
      >
        Heading 1
      </span>
    </div>
    <svg
      class="c2 c7"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        fill="#000"
        fill-opacity=".54"
      />
    </svg>
  </div>
</div>
`;

exports[`Toast should render message text 1`] = `
.c3 {
  font-size: 2.4rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c3 * {
  fill-opacity: 1;
  fill: #607890;
}

.c7 {
  font-size: 2.4rem;
  cursor: pointer;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c7 * {
  fill-opacity: 1;
  fill: #607890;
}

.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  display: block;
  margin: 0.8rem 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-width: 25rem;
  box-shadow: 0 0.8rem 3.2rem;
  border-radius: 0.4rem;
  border-left: 0.4rem solid;
}

.c0 .c5 {
  color: #012040;
}

.c0 > .c2 {
  position: absolute;
  right: 1.2rem;
  top: 1.2rem;
}

.c0 > .c2 * {
  fill: #012040;
}

.c1 .c2 {
  padding: 1.2rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ffffff;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 1.3rem 1.6rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        class="c2 c3"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.911 12.814l4.243 4.242M9.154 17.056l9.899-9.899"
          stroke="#000"
          stroke-linecap="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <div
      class="c4"
    >
      <span
        class="c5 c6"
      >
        Info message
      </span>
    </div>
    <svg
      class="c2 c7"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        fill="#000"
        fill-opacity=".54"
      />
    </svg>
  </div>
</div>
`;

exports[`Toast should render properly if child jsx 1`] = `
.c3 {
  font-size: 2.4rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c3 * {
  fill-opacity: 1;
  fill: #607890;
}

.c5 {
  font-size: 2.4rem;
  cursor: pointer;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c5 * {
  fill-opacity: 1;
  fill: #607890;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-width: 25rem;
  box-shadow: 0 0.8rem 3.2rem;
  border-radius: 0.4rem;
  border-left: 0.4rem solid;
}

.c0 .sc-AxirZ {
  color: #012040;
}

.c0 > .c2 {
  position: absolute;
  right: 1.2rem;
  top: 1.2rem;
}

.c0 > .c2 * {
  fill: #012040;
}

.c1 .c2 {
  padding: 1.2rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ffffff;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 1.3rem 1.6rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        class="c2 c3"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.911 12.814l4.243 4.242M9.154 17.056l9.899-9.899"
          stroke="#000"
          stroke-linecap="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <div
      class="c4"
    />
    <svg
      class="c2 c5"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        fill="#000"
        fill-opacity=".54"
      />
    </svg>
  </div>
</div>
`;

exports[`Toast should render properly with error variant 1`] = `
.c3 {
  font-size: 2.4rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c3 * {
  fill-opacity: 1;
  fill: #607890;
}

.c5 {
  font-size: 2.4rem;
  cursor: pointer;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c5 * {
  fill-opacity: 1;
  fill: #607890;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-width: 25rem;
  box-shadow: 0 0.8rem 3.2rem;
  border-radius: 0.4rem;
  border-left: 0.4rem solid;
}

.c0 .sc-AxirZ {
  color: #012040;
}

.c0 > .c2 {
  position: absolute;
  right: 1.2rem;
  top: 1.2rem;
}

.c0 > .c2 * {
  fill: #012040;
}

.c1 .c2 {
  padding: 1.2rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ffffff;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 1.3rem 1.6rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        class="c2 c3"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 11c-.55 0-1-.45-1-1V8c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1zm-1 2v2h2v-2h-2z"
          fill="#000"
          fill-opacity=".54"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="c4"
    />
    <svg
      class="c2 c5"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        fill="#000"
        fill-opacity=".54"
      />
    </svg>
  </div>
</div>
`;

exports[`Toast should render properly with info variant 1`] = `
.c3 {
  font-size: 2.4rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c3 * {
  fill-opacity: 1;
  fill: #607890;
}

.c5 {
  font-size: 2.4rem;
  cursor: pointer;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c5 * {
  fill-opacity: 1;
  fill: #607890;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-width: 25rem;
  box-shadow: 0 0.8rem 3.2rem;
  border-radius: 0.4rem;
  border-left: 0.4rem solid;
}

.c0 .sc-AxirZ {
  color: #012040;
}

.c0 > .c2 {
  position: absolute;
  right: 1.2rem;
  top: 1.2rem;
}

.c0 > .c2 * {
  fill: #012040;
}

.c1 .c2 {
  padding: 1.2rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ffffff;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 1.3rem 1.6rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        class="c2 c3"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M18.001 10.75v5l1.29 1.29c.63.63.18 1.71-.71 1.71H5.411c-.89 0-1.33-1.08-.7-1.71l1.29-1.29v-5c0-3.08 1.63-5.64 4.5-6.32v-.68c0-.83.67-1.5 1.5-1.5s1.5.67 1.5 1.5v.68c2.86.68 4.5 3.25 4.5 6.32zm-4 9a2 2 0 1 1-4 0h4z"
          fill="#000"
          fill-opacity=".54"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="c4"
    />
    <svg
      class="c2 c5"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        fill="#000"
        fill-opacity=".54"
      />
    </svg>
  </div>
</div>
`;

exports[`Toast should render properly with success variant 1`] = `
.c3 {
  font-size: 2.4rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c3 * {
  fill-opacity: 1;
  fill: #607890;
}

.c5 {
  font-size: 2.4rem;
  cursor: pointer;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c5 * {
  fill-opacity: 1;
  fill: #607890;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-width: 25rem;
  box-shadow: 0 0.8rem 3.2rem;
  border-radius: 0.4rem;
  border-left: 0.4rem solid;
}

.c0 .sc-AxirZ {
  color: #012040;
}

.c0 > .c2 {
  position: absolute;
  right: 1.2rem;
  top: 1.2rem;
}

.c0 > .c2 * {
  fill: #012040;
}

.c1 .c2 {
  padding: 1.2rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ffffff;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 1.3rem 1.6rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        class="c2 c3"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.911 12.814l4.243 4.242M9.154 17.056l9.899-9.899"
          stroke="#000"
          stroke-linecap="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <div
      class="c4"
    />
    <svg
      class="c2 c5"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        fill="#000"
        fill-opacity=".54"
      />
    </svg>
  </div>
</div>
`;

exports[`Toast should render properly with warning variant 1`] = `
.c3 {
  font-size: 2.4rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c3 * {
  fill-opacity: 1;
  fill: #607890;
}

.c5 {
  font-size: 2.4rem;
  cursor: pointer;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c5 * {
  fill-opacity: 1;
  fill: #607890;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-width: 25rem;
  box-shadow: 0 0.8rem 3.2rem;
  border-radius: 0.4rem;
  border-left: 0.4rem solid;
}

.c0 .sc-AxirZ {
  color: #012040;
}

.c0 > .c2 {
  position: absolute;
  right: 1.2rem;
  top: 1.2rem;
}

.c0 > .c2 * {
  fill: #012040;
}

.c1 .c2 {
  padding: 1.2rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ffffff;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 1.3rem 1.6rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        class="c2 c3"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4.47 20.504c-1.54 0-2.5-1.67-1.73-3l7.53-13.01c.77-1.33 2.69-1.33 3.46 0l7.53 13.01c.77 1.33-.19 3-1.73 3H4.47zm15.06-2L12 5.494l-7.53 13.01h15.06zm-8.53-8v2c0 .55.45 1 1 1s1-.45 1-1v-2c0-.55-.45-1-1-1s-1 .45-1 1zm2 7v-2h-2v2h2z"
          fill="#000"
          fill-opacity=".54"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="c4"
    />
    <svg
      class="c2 c5"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        fill="#000"
        fill-opacity=".54"
      />
    </svg>
  </div>
</div>
`;
